# ultrafinance

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.builder  README.md  justfile  v2
.sqlx/: query-021c5704538424c74b6454d161429cfb54a24f9edef42dbaf54c747caf2277c5.json  query-17babc9502c301902e421530ebd5cf06a8154b40545fade452f47efa6a265606.json  query-1fa0e10a711f19b2b45cfc4b7be0cbee4c3aa1b97bbfdb307dec374659af7401.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-2e7618ad8e526b2e09470cf90f7eb36a2510dee22dc09a8f16e2710faa36d5b7.json  query-31e01b1ecb506e308eef34288b81eabd4127712053a664b1f14ca28787714a86.json  query-32facf3bf257dfe2a701826f480e26a72f380e7c7e446d7b6b5f9e0a3c8fdb70.json  query-33b3cb840ed346be931265802999c0415d1ff8d4ac9910dadb5589158f31f768.json  query-353d837737b000e758b0f8d98483644b3de6ec08ea9ed2984e73c59b6391bf9e.json  query-3c0a53d5c18f045bb767909a4f233efd46aae56ce0c0ce110c492c04e19a760b.json  query-3e4e5c4be44ef130a6e886ed815bdf3e8d3d3f61e17713aa10f9912522cd84ca.json  query-3f18abecfdd440980b4614372bb3e67a33dfafd83835476a11352002979a6aa2.json  query-45442094cdff368c462dadb52c7a85134e56f8f87bf4372243508dd9d873eb45.json  query-486577d18cff33e9e4a52ceaa95696a28db6c2816e04876cd152bd2e5746945c.json  query-4e327c060a7ade0912da9a09b65eb41422d9dea5c8a680f827e6df5794e614eb.json  query-50b45d40eab8cc9d57d14073073ee56f85cf83bc32a199dd85d8cb32e8109686.json  query-5718335ef21524b6aa7ba1e1353a9919856d2e8f2b9d00a5fa2ac764cc20ad2f.json  query-57d2a411562b08a18d22cf1a7cd45a340fd147bb89aa89a67e49b630cf72dffb.json  query-5b2deb992195753e33ae70c8f197d6c5479bec70da53f393109d2391a8eee466.json  query-6cff436448c9389cf604130e0264af739566c860a8a58b415ba072155a3ed8e9.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-739dc6042cbd355c4e5f564271a939db1dd9e479f19aabb306a322928bf44d03.json  query-7fdfa5092c2698e28abde5928140210c6ca5e39b50be78685fd286b61a8aaee1.json  query-87927d49a16518db98e2894351edd3445e119cb33867d78f4af212b98db78381.json  query-8937cd6c5b25899adc4a84e256180b111b251cbc8cea552dcc0e393fe4826178.json  query-9bc12087ed7556487756f4d1ba0c4680fc32a7314eaa3fc56dbc02b32d636523.json  query-9dec122ac3ef1524489596b938aec514ebb82bd489db87e4d19c760c5322a640.json  query-a8e14edcd14cb3b2e8c814e7da240caa66f87e460cb8cb09042faade7f909d11.json  query-a93fcc43a8c3360636a952ce8a670182ee3b8acc6e734b091b57db09e540feb9.json  query-aac62c97f26e5d3661a612ed81b6ee1ffadd889cbede1d38c7ad79713f77d840.json  query-b5a62a8d24d103f0ea38871ec3556b019fb2f0664d2e71b3f227212a8f48902d.json  query-c289618ff6e58f3280f328d2f4bd0d571a82ce93cff1eddcd69cd0d16994876a.json  query-ca6d332c86d6712a5933d19c745d8fc9717fc649bcf6f3f354753321ce94e4ea.json  query-cff41caf74c21468b40a8867573dc7b34418b402cca906636904c6dde2ce3aff.json  query-d602b841f3ad7e4553f93710a2129826a8a8d6b8845bd305c2328cc3b47281ea.json  query-d6afe95c406da4f01652b7d6ab822be27d4c12cb4e93910dea568c24c6b04264.json  query-d71a15a5b5dd593e9caf3e37b5ed7773b59260436d0a36cf338225d9ac4014ef.json  query-db6b404cc9655b1696de825b297b258b712e445d766470a1ca764fc5e8405780.json  query-eeea5b1f34fda47a236dd824f79d41a86e3b25d8ffe1ccdfd6f9c421446cd4a1.json
bindings/: Account.ts  CreateFunction.ts  CreateSession.ts  CreateTrigger.ts  ExchangeRate.ts  Function.ts  Institution.ts  Location.ts  Merchant.ts  NewUser.ts  NordigenRequisition.ts  Requisition.ts  StdioMsg.ts  TestFunction.ts  TestFunctionResult.ts  Transaction.ts  TransactionWithMerchant.ts  Trigger.ts  TriggerFilter.ts  TriggerFilterPredicate.ts  TriggerLog.ts  TriggerParams.ts  TriggerQueue.ts  UpdateAccount.ts  UpdateFunction.ts  UpdateTrigger.ts  UpdateUser.ts  User.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1708412175575-25a6292de899f.mjs
src/: deno.rs  exchangerate_api.rs  gpt_enricher.rs  main.rs  models.rs  nordigen.rs  ntropy.rs  r.json  schema.rs  server.rs  synth_api.rs  ultrafinance.rs  utils.rs
terraform/: main.tf
(+67 files in other folders)
