[package]
name = "ultrafinance"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ultrafinance"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.17", features = ["derive"] }
cli-table = "0.4.7"
deno_runtime = "0.80.0"
diesel = { version = "2.0.0", features = ["mysql", "chrono", "r2d2", "serde_json"] }
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
serde = { version = "1.0.146", features = ["serde_derive"] }
serde_json = "1.0.87"
sha2 = "0.10.6"
tokio = "1.21.2"
futures = "0.3.21"
deno_ast = { version = "0.20.0", features = ["typescript", "transpiling"] }
dotenvy = "0.15.6"
actix-web = "4.2.1"
uuid = { version = "1.2.2", features = ["v4"] }
rust-argon2 = "1.0.0"
rand = "0.8.5"
ts-rs = { version = "6.2.1", features = ["chrono", "chrono-impl"] }
actix-cors = "0.6.4"
derive_more = "0.99.17"
diesel-enum = "0.1.0"
paperclip = { version = "0.7.1", features = ["actix4", "swagger-ui", "chrono"] }
r2d2 = "0.8.10"
serde_with = "2.1.0"
threadpool = "1.8.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-identity = "0.5.2"
base64 = "0.21.0"
actix-files = "0.6.2"
