[package]
name = "ultrafinance"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "ultrafinance"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.0.17", features = ["derive"] }
cli-table = "0.4.7"
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
serde = { version = "1.0.146", features = ["serde_derive"] }
serde_json = "1.0.87"
sha2 = "0.10.6"
tokio = "1.21.2"
futures = "0.3.21"
dotenvy = "0.15.6"
uuid = { version = "1.2.2", features = ["v4"] }
rand = "0.8.5"
derive_more = "0.99.17"
base64 = "0.21.0"
dialoguer = "0.10.4"
serde_path_to_error = "0.1.15"
sqlx = { version = "0.7.2", features = [
	"runtime-tokio-rustls",
	"mysql",
	"macros",
	"chrono",
	"json"
], default-features = false }
log = "0.4.20"
env_logger = "0.11.2"
async-openai = "0.18.3"
iso_currency = { version = "0.4.4", features = ["serde", "with-serde"] }
async-trait = "0.1.81"
